force-app/main/default/objects/Scribe_Change_Log__c/Scribe_Change_Log__c.object-meta.xml
<CustomObject>
    <!--
      Assigns Scribe_Change_Log_Record_Page as the org-default Lightning record
      page. Record-page assignment is an ActionOverride on View with type
      Flexipage; a flexipage without this is invisible to users.
    -->
    <description>The audit backbone. One record per action Scribe takes (field update, task created, contact created, call logged, stage-gap task). The single source of truth for everything Scribe has ever done, independent of how it is viewed.</description>
    <label>Scribe Change Log</label>
    <nameField>
        <displayFormat>CHG-{00000}</displayFormat>
        <label>Change Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scribe Change Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>