force-app/main/default/objects/Scribe_Change_Log__c/fields/Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Type__c</fullName>
    <label>Change Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Call Logged</fullName><default>false</default><label>Call Logged</label></value>
            <value><fullName>Field Update</fullName><default>false</default><label>Field Update</label></value>
            <value><fullName>Task Created</fullName><default>false</default><label>Task Created</label></value>
            <value><fullName>Stage Gap Task</fullName><default>false</default><label>Stage Gap Task</label></value>
            <value><fullName>Contact Created</fullName><default>false</default><label>Contact Created</label></value>
        </valueSetDefinition>
    </valueSet>
    <description>What kind of action produced this audit row.</description>
</CustomField>