force-app/main/default/objects/Scribe_Change_Log__c/fields/Created_By_Rep__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Rep__c</fullName>
    <label>Created By Rep</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Scribe_Change_Logs</relationshipName>
    <relationshipLabel>Scribe Change Logs</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which rep's conversation triggered this change. Distinct from CreatedById, which is always the integration user.</description>
</CustomField>