force-app/main/default/objects/Scribe_Change_Log__c/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <label>Field Name</label>
    <type>Text</type>
    <length>128</length>
    <description>Populated only for Field Update rows: the API name of the field that changed.</description>
</CustomField>