force-app/main/default/objects/Scribe_Change_Log__c/fields/New_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Value__c</fullName>
    <label>New Value</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Populated only for Field Update rows: the value after Scribe changed it.</description>
</CustomField>