force-app/main/default/objects/Scribe_Change_Log__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <label>Object API Name</label>
    <type>Text</type>
    <length>128</length>
    <description>API name of the object that was changed (e.g. Opportunity, Task, Contact).</description>
</CustomField>