force-app/main/default/objects/Scribe_Change_Log__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <label>Related Record Id</label>
    <type>Text</type>
    <length>18</length>
    <externalId>true</externalId>
    <description>The 15/18-char Id of the record Scribe changed or created (Opportunity, Task, Contact, or the Call Log itself).</description>
</CustomField>