force-app/main/default/objects/Scribe_Change_Log__c/fields/Related_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Name__c</fullName>
    <label>Related Record Name</label>
    <type>Text</type>
    <length>255</length>
    <description>Human-friendly name of the changed record, captured at write time so the audit row reads clearly even if the record is later renamed or deleted.</description>
</CustomField>