force-app/main/default/objects/Scribe_Change_Log__c/fields/Rep_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Rep_Confirmed__c</fullName>
    <label>Rep Confirmed</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>True when this write required and received explicit rep confirmation (Opportunity updates and new Contacts). False for lower-risk additive actions.</description>
</CustomField>