force-app/main/default/objects/Scribe_Change_Log__c/fields/Source_Call_Log__c.field-meta.xml
<CustomField>
    <fullName>Source_Call_Log__c</fullName>
    <label>Source Call Log</label>
    <type>Lookup</type>
    <referenceTo>Scribe_Call_Log__c</referenceTo>
    <relationshipName>Change_Logs</relationshipName>
    <relationshipLabel>Change Logs</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ties every change back to the exact recap that produced it.</description>
</CustomField>