force-app/main/default/objects/Scribe_Change_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Change_Type__c</columns>
    <columns>Object_API_Name__c</columns>
    <columns>Related_Record_Name__c</columns>
    <columns>Field_Name__c</columns>
    <columns>Old_Value__c</columns>
    <columns>New_Value__c</columns>
    <columns>Created_By_Rep__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Changes</label>
</ListView>