force-app/main/default/objects/Scribe_Change_Log__c/listViews/By_Object.listView-meta.xml
<ListView>
    <fullName>By_Object</fullName>
    <columns>NAME</columns>
    <columns>Object_API_Name__c</columns>
    <columns>Change_Type__c</columns>
    <columns>Related_Record_Name__c</columns>
    <columns>Field_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>By Object</label>
</ListView>