force-app/main/default/objects/Scribe_Change_Log__c/listViews/Field_Updates_Only.listView-meta.xml
<ListView>
    <fullName>Field_Updates_Only</fullName>
    <columns>NAME</columns>
    <columns>Object_API_Name__c</columns>
    <columns>Related_Record_Name__c</columns>
    <columns>Field_Name__c</columns>
    <columns>Old_Value__c</columns>
    <columns>New_Value__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Change_Type__c</field>
        <operation>equals</operation>
        <value>Field Update</value>
    </filters>
    <label>Field Updates Only</label>
</ListView>