force-app/main/default/objects/Scribe_Change_Log__c/listViews/This_Week.listView-meta.xml
<ListView>
    <fullName>This_Week</fullName>
    <columns>NAME</columns>
    <columns>Change_Type__c</columns>
    <columns>Object_API_Name__c</columns>
    <columns>Related_Record_Name__c</columns>
    <columns>Created_By_Rep__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>This Week</label>
</ListView>